--- a/main.scss
+++ b/main.scss
@@ -1,1 +1,107 @@
+body{
 
+    margin: 0;
+    padding: 25px 0;
+    display: flex;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+
+}
+.people{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 500px;
+    justify-content: center;
+    margin: 0 auto;
+    gap: 30px 20px;
+}
+@media (min-width: 1000px) {
+    .people{
+       max-width: 1000px;
+       justify-content: start;
+    }
+  }
+  
+.person{
+    background-color: #fff;
+    width: 200px;
+    height: 231px;
+    border-radius: 10px;
+    
+    &:hover{
+        background-color: #EEEEEE;
+        transform: scale(1.2);
+        
+        & .extra{
+            display: flex;
+            margin: 9px auto 0;
+            justify-content: center;
+            min-width: 130px;
+            font-weight: 500;
+            background-color: #EEEEEE;
+        }
+        & .photo img{
+            border-radius: 60px;
+        }
+        
+    }
+}
+.photo{
+    
+    position: relative;
+}
+.photo img{
+    
+    width: 200px;
+    height: 200px;
+    border-radius: 200px;
+    transform: inherit;
+}
+.rank{
+    font-size: 18px;
+    display: flex;
+    position: absolute;
+    color: #8B0000;
+    background-color: #fff;
+    height: 32px;
+    width: 32px;
+    right: 10px;
+    top: 84px;
+    border-radius: 200px;
+    justify-content: center;
+    align-items: center;
+}
+.details{
+    display: flex;
+    margin: 8px auto 0;
+    flex-wrap:wrap;
+}
+.name{
+    margin: 0 auto;
+    font-size: 20px;
+    align-items: center;
+    justify-content: center;
+    color: #2F4F4F;
+}
+.extra{
+    display: none;
+    background-color: #EEEEEE;
+
+    
+}
+.sport{
+   font-size: 18px; 
+   &::after{
+    content: ',';
+   }
+}
+.pay{
+    margin-left: 5px;
+    font-size: 18px;
+    &::before{
+        content: '$';
+    }
+    &::after{
+        content: 'M';
+    }
+}
